Project

General

Profile

Actions

Bug #38258

closed

filestore: fsync(2) return value not checked

Added by Sage Weil about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
Correctness/Safety
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

WBThrottle is the main one, but there are also fsync(2) calls in the write guard code that should be checked.


Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #38316: luminous: filestore: fsync(2) return value not checkedResolvedNeha OjhaActions
Copied to RADOS - Backport #38317: mimic: filestore: fsync(2) return value not checkedResolvedPrashant DActions
Actions #1

Updated by Sage Weil about 5 years ago

  • Status changed from 12 to Fix Under Review
Actions #2

Updated by Sage Weil about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38316: luminous: filestore: fsync(2) return value not checked added
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38317: mimic: filestore: fsync(2) return value not checked added
Actions #5

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF