os/filestore: ceph_abort() on fsync(2) or fdatasync(2) failure

If we get an error from f[data]sync that is always a fatal error.

Fixes: http://tracker.ceph.com/issues/38258
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 3892b81303bcc35056ca06371651e13b7a4c4f2a)

 Conflicts:
	src/os/filestore/FileStore.cc - encode trivial resolution
	src/os/filestore/WBThrottle.cc - trivial resolution